# sneakyshell

./: .gitignore  Cargo.toml  GETTING_STARTED.md  LICENSE  README.md  client.toml.example  server.toml.example  test-embedded-router.sh
.claude/: architecture.md  concepts.md  context.md  navigation.md  settings.local.json
crates/reticulum-core/: Cargo.toml
crates/reticulum-core/src/: embedded_router.rs  error.rs  identity.rs  interface.rs  lib.rs  packet.rs  sam.rs
crates/reticulum-core/tests/: mock_interface_test.rs
crates/shell-client/: Cargo.toml
crates/shell-client/src/: client.rs  config.rs  error.rs  lib.rs  main.rs  repl.rs
crates/shell-proto/: Cargo.toml
crates/shell-proto/src/: error.rs  lib.rs  messages.rs  protocol.rs
crates/shell-server/: Cargo.toml
crates/shell-server/src/: config.rs  error.rs  lib.rs  listener.rs  main.rs  server.rs  session.rs  shell.rs
crates/shell-server/tests/: integration_test.rs
docs/: EMBEDDED-ROUTER.md  I2P-IMPLEMENTATION.md  I2P-SETUP.md  PROTOCOL.md  QUICKSTART.md  RETICULUM.md  SETUP.md
