[workspace]
members = [
    "crates/reticulum-core",
    "crates/shell-proto",
    "crates/shell-server",
    "crates/shell-client",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Reticulum Shell Contributors"]
license = "MIT"
repository = "https://github.com/yourusername/reticulum-shell"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Cryptography
ed25519-dalek = "2.1"
sha2 = "0.10"
rand = "0.8"

# Networking
bytes = "1.5"

# Configuration
toml = "0.8"

# Utilities
hex = "0.4"
