[package]
name = "shell-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "shell-client"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }

# Local dependencies
reticulum-core = { path = "../reticulum-core" }
shell-proto = { path = "../shell-proto" }

# Additional dependencies
rustyline = "13.0"
colored = "2.1"
shell-words = "1.1"
hex = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tempfile = "3.8"

[features]
default = []
embedded-router = ["reticulum-core/embedded-router"]
