[package]
name = "shell-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "shell-server"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }

# Local dependencies
reticulum-core = { path = "../reticulum-core" }
shell-proto = { path = "../shell-proto" }

# Additional dependencies
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = "0.4"
hex = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
shell-client = { path = "../shell-client" }

[features]
default = []
embedded-router = ["reticulum-core/embedded-router"]
